fix menu overflow on ipad

--- a/editor/jaxedit.css
+++ b/editor/jaxedit.css
@@ -111,7 +111,7 @@ html, body {
 }
 
 .btngroup {
-  margin-left: 28px;
+  margin-left: 26px;
   line-height: 40px;
   display: inline-block;
   float: left;
